Tests/Conformance/Generated/Builtin/Constant/Data/DataMisInteger.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Data.DataMisInteger

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_data_dataMisInteger "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/data/dataMisInteger/dataMisInteger.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Data.DataMisInteger
